--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.1",
     "firebase": "^9.14.0",
     "framer-motion": "^7.3.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
@@ -27,6 +28,7 @@
     "remixicon": "^2.5.0",
     "stripe": "^11.5.0",
     "swiper": "^8.4.5",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
