--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "bootstrap": "^5.2.1",
     "firebase": "^9.14.0",
     "framer-motion": "^7.3.2",
+    "i18next": "^22.4.8",
+    "i18next-browser-languagedetector": "^7.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-hot-toast": "^2.4.0",
+    "react-i18next": "^12.1.1",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
